objects/NTFS__c.object
<CustomObject>
    <fields>
        <fullName>Conta_principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Conta principal)</relationshipLabel>
        <relationshipName>NTFS_Conta_Principal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forma_de_Pagamento__c</fullName>
        <label>Forma de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Credito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Marca)</relationshipLabel>
        <relationshipName>NTFS_Marca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Cliente)</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Nota__c</fullName>
        <label>Data da Nota</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Forma_de_pagamento__c</fullName>
        <label>Forma de pagamento</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loja</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Loja</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_NomeVendedor__c</fullName>
        <label>Nome do Vendedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_RS__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NTFS</label>
    <nameField>
        <label>Número da NTFS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTFS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>